--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "flexible promise-based enhancement for one question case",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "dependencies": {
     "clone": "^1.0.2",
     "inquirer-bluebird": "^1.0.2"
+  },
+  "devDependencies": {
+    "ava": "^0.13.0",
+    "inquirer-test": "^1.0.3"
   }
 }
